--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -9,13 +9,13 @@ h1{
 	text-align: center;
 	font-size: 15px;
 	font-weight: bold;
-	padding: 125px 0px 20px 0; 
+	padding: 12px 0px 20px 0; 
 	
 }
-
+/* 
 h2{
 	text-align: center;
-	font-size: 15px;
+	font-size: 1px;
 	padding-bottom: 40px;
 	color: rgb(61, 1, 1),
-}
+} */
